src/test/deca/context/invalid/langage_essentiel/premiere_passe/regle_1_3_3.deca
// Description:
//    regle 1.3 opération partielle ⊕
//
// Resultats:
//    Ligne 8: Class or type already exists.
class A {
}
class A {
}

// raison : opération partielle ⊕
// message : « class or type already exists »
